Further Oxford Handbook citations.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -487,7 +487,7 @@ Parallel Reality (PR) & Systems comprising two environments, one real and the ot
 
 %\subsection{Presence}
 \label{lit-review-presencec}
-Any investigation into alternate realities is likely to involve discussion of the experiential aspects of these new realities and parallel reality should be no exception. The concept of \textit{presence}, the subjective experience of `being in' one place or environment even when one is physically situated in another~\cite{Witmer1998}, features prominently in such discussions. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding and vivd the virtual environment is, and the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
+Any investigation into alternate realities is likely to involve discussion of the experiential aspects of these new realities and parallel reality should be no exception. The concept of \textit{presence}, the subjective experience of `being in' one place or environment even when one is physically situated in another~\cite{Witmer1998}, features prominently in such discussions. Presence is distinguished from the concept of \textit{immersion}, used here in the context of `immersion as transportation'~\cite{Calleja2014}, which is an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding and vivd the virtual environment is, and the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
 
 Also related is the concept of \textit{involvement}, defined in this context as the psychological state experienced as a consequence of focusing one's energy and attention on a coherent set of stimuli and it is theorized that both involvement and immersion are necessary for experiencing a sense of presence~\cite{Witmer1998}.
 
