Minor typographical corrections.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -41,7 +41,7 @@ The central theme of this thesis is the concept of `parallel reality', a new cat
 
 %=====================
 
-The concept of alternate realities has become a mainstay both of science fiction and of serious academic research, with the concept of other worlds and how we can visit them or bring them into our real world keeping authors and scientists alike fascinated for decades. The concept of these `virtual worlds' dates back far into human history, long before mankind's invention of the transistor and the computers that would subsequently harness it;
+The concept of alternate realities has become a mainstay both of science fiction and of serious academic research, with the concept of other worlds and how we can either visit them or bring them into our real world keeping authors and scientists alike fascinated for decades. The concept of these `virtual worlds' dates back far into human history, long before mankind's invention of the transistor and the computers that would subsequently harness it.
 
 \begin{quote}
 	\textit{``Virtual worlds, or as we will now more broadly define them, immersive experiences delivered through the human imagination, have their origins in deep prehistory. Whether these varieties of nonphysical, dreamlike realities were communicated by our ancestors through the imitation of animals, the incarnation of spirits, the painting of scenes on the stone canvasses of caves, the holding of ceremonial rites in temples, or the elaboration of the human story through the fount of theater, humans have craved and crafted virtual-world experiences from the dawn of artistic and linguistic expression.''}~\cite{Damer2014}
@@ -61,9 +61,9 @@ The early 2000s also saw the rise of a next generation of persistent multi-user 
 
 One such project, led by Joshua Lifton at MIT's Media Lab, introduced \textit{cross reality} as a new category of alternate reality in which the real world and a virtual environment (in this case provided by Second Life) are connected by sensor and actuator infrastructure, allowing bidirectional exchange of media and control information between the two environments, such that actions and events in one can manifest in the other~\cite{Lifton2007a}. This endeavour aimed to mitigate what Lifton identified as the \textit{vacancy problem}, which described how a person interacting with a virtual environment becomes unaware of their real environment and vice versa, by virtue of not having \textit{``the means to be in more than one place (reality) at a time''}.
 
-The vacancy problem remains an important consideration as we move rapidly into a world where the ubiquity of technology, wireless communications and the explosive popularity of social networking heralds the coming of an era in which maintaining a virtual presence (whether 3D or on Facebook) while continuing to function in the real world becomes not just desirable, but the norm, creating instances of \textit{polysocial reality}~\cite{Applin2012} (see also the opening quote to this chapter) wherever we go.
+The vacancy problem remains an important consideration as we move rapidly into a world where the ubiquity of technology, wireless communications and the explosive popularity of social networking services (SNS) heralds the coming of an era in which maintaining a virtual presence (whether 3D or on Facebook) while continuing to function in the real world becomes not just desirable, but the norm, creating instances of \textit{polysocial reality}~\cite{Applin2012} (see also the opening quote to this chapter) wherever we go.
 
-It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real and a virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they are, gives rise to parallel reality. With the recent resurgence of interest in HMD based virtual reality, thanks largely to the introduction by Oculus\footnote{\url{https://www.oculus.com/}} of their Rift developer kits that leverage advances in display technology to overcome the shortfalls of the 90s virtual reality fad, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas\footnote{\url{https://www.indooratlas.com/}}, the \textit{Mirrorshades} parallel reality platform was developed and evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors and actuators, parallel reality grants them the ability to switch between direct visual engagement with each environment - to at one moment view their real surroundings and the next the equivalent vantage in the immersive parallel virtual environment.
+It is here in the story of alternate realities that this thesis enters. Taking one of the core concepts of cross reality, that of tandem real and a virtual environments both complete unto themselves, and extending it to allow the user to engage \textit{visually} with both environments wherever within them they may be, gives rise to parallel reality. With the recent resurgence of interest in HMD based virtual reality, thanks largely to the introduction by Oculus\footnote{\url{https://www.oculus.com/}} of their Rift developer kits that leverage advances in display technology to overcome the shortfalls of the 90s virtual reality fad, and the introduction of novel smartphone based indoor positioning technology from IndoorAtlas\footnote{\url{https://www.indooratlas.com/}}, the \textit{Mirrorshades} parallel reality platform was developed and evaluated as a first foray into this exciting new take on our realities. Where cross reality permitted users an indirect insight into the other environment by means of sensors and actuators, parallel reality grants them the ability to switch between direct visual engagement with each environment - to at one moment view their real surroundings and at the next to view the equivalent vantage in the immersive parallel virtual environment.
 
 %=========================================================================================================
 
@@ -77,7 +77,7 @@ The contributions of this thesis can be summarized as follows;
 	\item The presentation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Development of a preliminary parallel reality platform, the Virtual Time Window, through extension of the Second Life client.
 	\item Development of a second parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
-	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the application of an established presence questionnaire to parallel reality.
+	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience.
 	\item Creation and discussion of a set of best practices for future parallel reality endeavours.
 \end{itemize}
 
