--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -35,7 +35,7 @@ The new category of parallel reality is thus proposed to describe systems that c
 
 \section{Overview}
 
-Alternate realities, explored in the context of this thesis as any situation in which the environmental stimuli received by a subject have been somehow modified or mediated (often by computer), have received substantial attention in recent decades. These themes have been explored for purposes as diverse as education~\cite{Warburton2009} and new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} and military training~\cite{Qiu2009} in addition to ever present entertainment applications~\cite{Scherrer2008}. Although terms such as \textit{virtual reality} and \textit{augmented reality} are now relatively common, both in the scientific literature and in the mainstream press, definitions of alternate reality terms such as these have often been used in vague and even conflicting manners, thanks in no small part to the fundamental nature of virtuality itself;
+Alternate realities, explored in the context of this thesis as any situation in which the environmental stimuli received by a subject have been somehow modified or mediated (often by computer), have received substantial attention in recent decades. These themes have been explored for purposes as diverse as education~\cite{Warburton2009} and new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} and military training~\cite{Qiu2009} in addition to ever present entertainment applications~\cite{Scherrer2008}. Although terms such as \textit{virtual reality} and \textit{augmented reality} are now relatively common, both in the scientific literature and in the mainstream press, definitions of alternate reality terms such as these have often been used in vague and even conflicting manners, thanks in no small part to the fundamental nature of virtuality itself.
 
 \begin{quote}
 	\textit{``It is a characteristic feature of virtuality that it causes puzzlement regarding its relation to reality''}~\cite{Brey2014}
@@ -245,7 +245,7 @@ With the sound understanding of the ecosystem of alternate realities provided by
 
 Cross reality (XR~\cite{kim:practical}) is a mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with a complete virtual environment, facilitating synchronous bidirectional exchange of media and control information between real and virtual environments. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}, such that actions within the virtual environment can have `extravirtual effects'~\cite{Soraker2010} upon the real environment and vice-versa.
 
-The principle features that distinguish cross reality from the other alternate realities covered so far are;
+The principle features that distinguish cross reality from the other alternate realities covered so far are:
 \begin{enumerate}
 	\item A shift from single- to bi-directional information flow between real and virtual environments~\cite{kim:practical}.
 	\item That both the real and virtual environments are complete unto themselves (but are enriched by their ability to mutually reflect, influence and merge into one another)~\cite{lifton:merging}.
@@ -253,7 +253,7 @@ The principle features that distinguish cross reality from the other alternate r
 
 %This thesis presents systems that focus on the second aspect above and extends it by permitting both environments to be experienced at any time and position.
 
-As an alternate reality paradigm cross reality has its roots in work undertaken by the IBM Virtual Universe Community\footnote{\url{http://eightbar.co.uk/2006/04/22/lessons-from-second-life/}}\footnote{\url{http://eightbar.co.uk/2006/04/09/second-life-outside-in/}}\footnote{\url{http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/}}, described in personal correspondence by Ian Hughes;
+As an alternate reality paradigm cross reality has its roots in work undertaken by the IBM Virtual Universe Community\footnote{\url{http://eightbar.co.uk/2006/04/22/lessons-from-second-life/}}\footnote{\url{http://eightbar.co.uk/2006/04/09/second-life-outside-in/}}\footnote{\url{http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/}}, described in personal correspondence by Ian Hughes.
 
 \begin{quote}
 \textit{``The control mechanisms worked two ways generally. There was a physical lab that had devices that were controlled by a pub/sub mechanism \ldots\ Those devices subscribed to various messages. So initially web pages controlled them \ldots\ Equally the objects generated messages when they were physically switched on and off. As SL\SLfootnote{} had an RPC interface it was possible \ldots\ to subscribe to the same messages and send requests into SL to change states of objects \ldots\ So there were lights, blinds, proximity detectors and even the tilt sensors on the laptops that were instrumented with these messages.''}
@@ -264,13 +264,13 @@ It was the subsequent work of the Responsive Environments Group at MIT's Media L
 \TwoFig{lifton_shadow_lab.png} {Side view of the virtual Shadow Lab.} {lifton_shadow_lab.png}
        {ubiquitous_sensor_portal.jpg} {A Ubiquitous Sensor Portal.} {ubiquitous_sensor_portal.jpg}
 
-One of the driving motivations behind this work was what Lifton dubbed `the vacancy problem';
+One of the driving motivations behind this work was what Lifton dubbed `the vacancy problem':
 
 \begin{quote}
 \textit{``the noticeable and profound absence of a person from one world, either real or virtual, while they are participating in the other. Simply put, the vacancy problem arises because people do not currently have the means to be in more than one place (reality) at a time.''}~\cite{Lifton2007a}
 \end{quote}
 
-The Shadow Lab addressed the vacancy problem via the sensor/actuator infrastructure, more closely linking the real and virtual environments such that actions and events in one could manifest and be observed by users in the other even if they could not directly visually observe both environments in tandem. The vacancy problem was previously observed by HyperReality researchers, touching on an observation of the polysocial situations observed among mobile phone users of the time as a manifestation of the problem even before virtual environments were introduced to the picture; %HyperReality p35
+The Shadow Lab addressed the vacancy problem via the sensor/actuator infrastructure, more closely linking the real and virtual environments such that actions and events in one could manifest and be observed by users in the other even if they could not directly visually observe both environments in tandem. The vacancy problem was previously observed by HyperReality researchers, touching on an observation of the polysocial situations observed among mobile phone users of the time as a manifestation of the problem even before virtual environments were introduced to the picture. %HyperReality p35
 
 \begin{quote}
 	\textit{``One of the main problems with \ldots\ virtual reality is what to do about the body that is left behind in physical reality \ldots\ In HyperReality a person by definition is perceptually aware of the physical world around them, yet part of the attention normally given to the physical reality is given to interacting with virtual reality. It is difficult as yet to see how much this matters, but the increasing use of the mobile phone, which is a primitive form of HR\footnote{HyperReality}, gives us some feel for the issues. People using a mobile phone can walk busy streets \ldots\ while talking to someone who is not there.''}~\cite{Terashima2001}
@@ -282,7 +282,7 @@ A potential source of standardization for the implementation of cross reality sy
 
 \subsubsection{Alternate Reality Definitions from Cross Reality}
 
-Lifton's use of alternate reality terminology does not directly conclude that mixed reality is a broad term encompassing both augmented reality and augmented virtuality, but defines it as an environment ;
+Lifton's use of alternate reality terminology does not directly conclude that mixed reality is a broad term encompassing both augmented reality and augmented virtuality, but defines it as an environment
 
 \begin{quote}
 	\textit{``\ldots\ which would be incomplete without both its real and virtual components. For example, the walls and windows of a mixed reality house might be real, but the view out the windows might be virtual, either generated by a projector or as a blue screen effect in a head-mounted display. Without both the real house and the virtual views out the windows, the illusion of a consistent reality is broken''}~\cite{Lifton2007a}
@@ -394,7 +394,7 @@ The discussion in the previous section highlighted that the first distinguishing
 	\end{center}
 \end{figure}
 
-While the parallel reality concept introduced by this thesis also features two discrete environments, one real and one virtual, that users can transition between visually observing (figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3}), it does not feature this bidirectional information flow between the environments (other than using sensed real position information to maintain the user's vantage point into the virtual environment). Thus, this concept could not be considered cross reality as it does not meet both of the distinguishing criteria. The term \textbf{parallel reality} (PR) is instead proposed to describe the new concept. Parallel reality is thus defined as;
+While the parallel reality concept introduced by this thesis also features two discrete environments, one real and one virtual, that users can transition between visually observing (figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3}), it does not feature this bidirectional information flow between the environments (other than using sensed real position information to maintain the user's vantage point into the virtual environment). Thus, this concept could not be considered cross reality as it does not meet both of the distinguishing criteria. The term \textbf{parallel reality} (PR) is instead proposed to describe the new concept. Parallel reality is thus defined as:
 
 \begin{quote}
 	\textbf{Parallel Reality (PR):} A system comprising two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them.
